--- a/backend/package.json
+++ b/backend/package.json
@@ -14,12 +14,14 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.4.1",
+    "@supabase/supabase-js": "^2.49.1",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "signale": "^1.4.0"
+    "signale": "^1.4.0",
+    "uploadthing": "^7.5.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
