--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@react-spring/web": "^9.7.5",
+    "@uploadthing/react": "^7.3.0",
     "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -25,11 +26,13 @@
     "next": "14.2.17",
     "react": "^18",
     "react-dom": "^18",
+    "react-h5-audio-player": "^3.10.0-rc.1",
     "react-markdown": "^10.0.1",
     "react-syntax-highlighter": "^15.6.1",
     "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^7.5.2"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
