--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@react-spring/web": "^9.7.5",
+    "@tailwindcss/typography": "^0.5.16",
     "@uploadthing/react": "^7.3.0",
     "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
