--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-h5-audio-player": "^3.10.0-rc.1",
+    "react-hot-toast": "^2.5.2",
     "react-markdown": "^10.0.1",
     "react-syntax-highlighter": "^15.6.1",
     "remark-gfm": "^4.0.1",
